[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]==1.3.17", 
  "plotly<6.0"
  ]

[project.urls]
repository = "https://github.com/nomad-hzb/hzb-emil-image"

[project.optional-dependencies]
plugins = [
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-hzb-emil @ git+https://github.com/nomad-hzb/nomad-hzb-emil.git',
]
jupyter = [
'voila',
'ipyaggrid',
'ipyvuetify',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'ipympl',
'pyvis',
'lmfit',
'jupyterlab_h5web',
'jupyterlab>4.0',
'seaborn',
]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.3.17rc2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
