[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]==1.4.2",
  "setuptools",
  "plotly<6.0"
  ]

[project.urls]
repository = "https://github.com/nomad-hzb/hzb-emil-image"

[project.optional-dependencies]
plugins = [
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-hzb-emil @ git+https://github.com/nomad-hzb/nomad-hzb-emil.git',
  "pynxtools==0.12.0",
  "pynxtools-ellips>=0.1.1",
  "pynxtools-em>=0.4.2",
  "pynxtools-raman>=0.1.1",
  "pynxtools-xps>=0.5.4",
  "pynxtools-xrd>=0.0.7",
]
jupyter = [
'voila',
'ipyaggrid',
'ipyvuetify',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'ipympl',
'pyvis',
'lmfit',
'jupyterlab_h5web',
'jupyterlab>4.0',
'seaborn',
'ipykernel<7','ipython<9'
]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["flatdict>=4.1.0","hyperspy>=1.7.6", "pyzmq==27.0.2"]
prerelease = "allow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
